feat: 添加partition_name字段，实现获取用户上传视频功能